--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-python==3.8
-numpy==1.24.4
-streamlit==1.29.0
-face-recognition==1.3.0
-pip==23.3.1
-cv2 ==4.8.1
+streamlit
+cv2
+numpy
+face_recognition
+datetime
+os
 
