--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-cv2
-numpy
-face_recognition
-datetime
-os
+streamlit==1.29.0
+cv2==4.9.0
+numpy==1.24.4
+face_recognition== 1.3.0
+datetime==3.8.18
+os==10.0.19045.3996
 
